--- a/app/views/events/favorite.html.erb
+++ b/app/views/events/favorite.html.erb
@@ -2,7 +2,7 @@
 
 <div class="off-canvas">  
   <%= render 'events/nav_bar' %>
-
+<div class="temp-fave-header"></div>
   <%= render 'events/events' %>
 
 </div> <!-- /.off-canvas -->
