--- a/app/assets/stylesheets/favorite.css.scss
+++ b/app/assets/stylesheets/favorite.css.scss
@@ -98,7 +98,7 @@ body.favorites-page {
   }
   
   div.event_wrapper.swipeleft {
-    background-color: rgb(238, 103, 89) !important;
+    background-color: rgb(238, 103, 89);
   }
 
   div.box.swipeleft {
@@ -106,7 +106,7 @@ body.favorites-page {
   }
 
   div.event_wrapper.swiperight {
-    background-color: rgb(255, 194, 137) !important;
+    background-color: rgb(255, 194, 137);
   }
 
   .row_events {
