--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,6 +4,6 @@
     </div>         
 
 	<!-- Sign Up Button -->
-	 <%= link_to 'Discover Events', new_settings_path, class: 'discover' %>
+	 <%= link_to 'Discover Events', settings_path, class: 'discover' %>
   </div>
 </div> 
