Add basic css styles to registration and login page. Add error handling/validations.

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -10,6 +10,12 @@ body.events-page {
     padding: 0;
   }
 
+  .notice {
+    position: absolute;
+    top: 60px;
+    color:red;
+  }
+
   #sort {
     padding-right: 5px;
   }
