--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -74,7 +74,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-        <h4 class="modal-title" id="myModalLabel">Registration</h4>
+        <h4 class="modal-title" id="myModalLabel">Create Account</h4>
       </div>
       <div class="modal-body">
         <%= render 'events/registration' %>
