--- a/app/views/events/_nav_bar.html.erb
+++ b/app/views/events/_nav_bar.html.erb
@@ -36,11 +36,11 @@
             </a>
             <section class="nav__item__content">
               <%= form_tag({ controller: "sessions", action: "create"}, method: "post") do %>
-                <%= label_tag :email %>
-                <%= text_field_tag :email , nil, placeholder: 'your.name@example.com' %>
-                <%= label_tag :password %>
-                <%= text_field_tag :password %>
-                <%= check_box_tag :remember_me, 1, params[:remember_me] %>
+                <%#= label_tag :email %>
+                <%= text_field_tag :email , nil, placeholder: 'Email' %>
+                <%#= label_tag :password %>
+                <%= text_field_tag :password, nil, placeholder: 'Email' %>
+                <%#= check_box_tag :remember_me, 1, params[:remember_me] %>
                 <%= submit_tag 'Log In' %>
               <% end %>
             </section>
@@ -54,9 +54,9 @@
             </a>
             <section class="nav__item__content">
             <%= form_for(User.new) do |user| %>
-              <%= user.text_field :email, :placeholder => "email" %><br>
-              <%= user.password_field :password, :placeholder => "Enter password" %><br>
-              <%= user.submit "Submit", class: "button fave-buy-btn" %>
+              <%= user.text_field :email, :placeholder => "Email" %><br>
+              <%= user.password_field :password, :placeholder => "Password" %><br>
+              <%= user.submit "Sign Up", class: "button fave-buy-btn" %>
             <% end %>
 
             </section>
