Fix spelling mistake.

--- a/app/views/events/_nav_bar.html.erb
+++ b/app/views/events/_nav_bar.html.erb
@@ -39,7 +39,7 @@
                 <%#= label_tag :email %>
                 <%= text_field_tag :email , nil, placeholder: 'Email' %>
                 <%#= label_tag :password %>
-                <%= text_field_tag :password, nil, placeholder: 'Email' %>
+                <%= text_field_tag :password, nil, placeholder: 'Password' %>
                 <%#= check_box_tag :remember_me, 1, params[:remember_me] %>
                 <%= submit_tag 'Log In' %>
               <% end %>
