--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -90,7 +90,7 @@ $(document).ready(function(){
 
   $(".likebutton").click(function(){
     // $(this).toggleClass('yellow');
-    $(this).closest('.event_wrapper').delay(800).fadeOut( "hide");
+    $(this).closest('.event_wrapper').delay(800).fadeOut( "slow");
   });
 
   // function swipeleftHandler( event ){
