--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -24,17 +24,15 @@
 						</p>
 					</div>
 					<div class="col-xs-4 rsvp-class">
-						<% if @event.url.present? %>
-							<%= button_to "RSVP", @event.url, class: "rsvp" %>
-						<% else %>
-							<%= button_to "RSVP", event_path(@event), class: "rsvp" %>
-						<% end %>
+						
+							<%= link_to "RSVP", controller: 'events', action: "question", id: @event.id %>
+						
 					</div>
 					<% if current_user.present? %>
 						<% if @user.meetup_organizer? %>
           				 <span> <%= button_to "Claim event", { action: "update", id: @event.id } %>  </span>
           				
-         
+      
     					<% end %>
         			<% end %>
 					<div class="col-xs-4 text-right attendees-btn">
