hard coding signup in

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,18 @@
   <div class="overlay">
     <div class="welcomeLogo">
     </div>         
-
+    <div id="user_nav">
+    <% if user_signed_in? %>
+      Logged in as <strong><%= current_user.email %></strong>.
+      <%= link_to 'Edit profile', edit_user_registration_path %> |
+      <%= link_to "Logout", destroy_user_session_path, method: :delete %>|
+    
+    <% else %>
+      <%= link_to "Sign up", new_user_registration_path %> |
+      <%= link_to "Login", new_user_session_path %> |
+      <%= link_to "Sign in with Meetup", user_omniauth_authorize_path(:meetup) %>
+    <% end %>
+  </div>
 	<!-- Sign Up Button -->
 	 <%= link_to 'Discover Events', users_new_path, class: 'discover' %>
   </div>
