Fix interest right text margin.

--- a/app/assets/stylesheets/sign-up.css.scss
+++ b/app/assets/stylesheets/sign-up.css.scss
@@ -80,6 +80,7 @@
             position: absolute;
             top: 55px;
             font-size: 80%;
+            margin-right: 5px;
           }
         }
 
