can make and answer questions, all data moving though

--- a/app/views/events/question.erb
+++ b/app/views/events/question.erb
@@ -17,10 +17,12 @@
         <!-- <li><%= link_to 'Show', question %></li>
         <li><%= link_to 'Edit', edit_question_path(question) %></li>
         <li><%= link_to 'Destroy', question, method: :delete, data: { confirm: 'Are you sure?' } %></li> -->
-        <%= form_for (Answer.new) do |f| %>
+        <%= form_for (Answer.create) do |f| %>
     		<fieldset>
   				
-  				<%= f.text_field :cid, :value => question.id %>
+          <%= f.hidden_field :event, :value => params[:id]  %>
+  				<%= f.hidden_field :question, :value => question.id %>
+          <%= f.hidden_field :user, :value => current_user.id %>
   				<%= f.text_field :response %>
   				<%= f.submit %>
   			</fieldset>
