fix rsvp updater in show page.

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -35,7 +35,7 @@
 						<div class="col-xs-4 text-right attendees-btn">
 							<p>
 								<button data-toggle="modal" data-target=".rsvp-modal-lg"><i class="fa fa-users rsvp-modal"></i>
-								<i class="rsvp_badge"> <%= @rsvp_count %> </i></button>
+								<i class="rsvp_badge"> <%= @count %> </i></button>
 							</p>
 							<div class="modal fade rsvp-modal-lg" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
 								<div class="modal-dialog modal-lg">
