push to fix heroku

--- a/app/views/events/form.html.erb
+++ b/app/views/events/form.html.erb
@@ -1,4 +1,4 @@
-<h1>this is the form page </h1>
+<!-- <h1>this is the form page </h1>
 
 
 <%= form_for @event do |f| %>
@@ -6,4 +6,4 @@
 
 
   <%= f.submit %>
-<% end %>
+<% end %> -->
