--- a/app/views/events/question.erb
+++ b/app/views/events/question.erb
@@ -9,21 +9,24 @@
 	<br>
 
 
-  <% @questions.each do |question| %>
-    <% if question.event === @event.id %>
-      <h2><%= question.poll %></h2>
-      <%= form_for @answer do |f| %>
-        <%= f.hidden_field :event, :value => params[:id]  %>
-        <%= f.hidden_field :question, :value => question.id %>
-        <%= f.hidden_field :user, :value => current_user.id %>
-        <%= f.text_field :response %>
-        <%= f.submit %>
+   
+   <%= @questions.each do |q| %>  
+   <%=q.poll%>
+      
+      
+        <%= form_for (Answer.create), :remote => true do |f| %>
+       
+         
+          <%= f.hidden_field :event, :value => params[:id]  %>
+         
+          <%= f.hidden_field :user, :value => current_user.id %>
+         <%= f.text_field :response %>
+        <%= f.submit %>     
+       
       <% end %>
-      <% else %>
-      <% end %>
-  <% end %>
-  
-
+    
+    <% end %>
+    
 
 
 
