--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -19,7 +19,7 @@
     <%= f.label :password %>
     <%= f.password_field :password %><br>
 
-    <%= f.submit "Register" %>
+    <%= f.submit "Register", class: "btn btn-default" %>
 
   <% end %>
 </div>
