change sign up in nav to modal

--- a/app/views/events/_registration.html.erb
+++ b/app/views/events/_registration.html.erb
@@ -3,4 +3,5 @@
   <%= user.text_field :email, :placeholder => "your.name@example.com" %><br><br>
   <%= user.password_field :password, :placeholder => "Enter password" %><br><br>
   <%= user.submit "Submit", class: "btn btn-default" %>
+  <br><p>Already a user? Welcome back! <a href="/login">Sign in.</a></p>
 <% end %>
