--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -88,17 +88,6 @@
 <script>
 $(document).ready(function(){
 
-  $(".likebutton").click(function(){
-    // $(this).toggleClass('yellow');
-    $(this).closest('.event_wrapper').delay(800).fadeOut( "slow");
-  });
-
-  // function swipeleftHandler( event ){
-  //   $( event.target ).parents(".event_wrapper").addClass( "swipeleft" ).delay( 800 ).fadeOut( "slow" );
-  // }
-
-  // $( ".dislikebutton" ).on( "click", swipeleftHandler );
-
   $( ".likebutton" ).on( "click", swiperightHandler );
 
   function swiperightHandler( event ){
@@ -107,7 +96,8 @@ $(document).ready(function(){
     var info = e[0].classList[1]
     var num = parseInt(info)
     checkCookie(num);
-    alert(e[0].innerText + 'has been added to your favorites.')
+    alert(e[0].innerText + 'has been added to your favorites.');
+    e.delay(800).fadeOut("slow");
   }
 });
 
