--- a/app/views/events/_nav_bar.html.erb
+++ b/app/views/events/_nav_bar.html.erb
@@ -34,9 +34,7 @@
       </a>
     </li>
     <li>
-      <a href="/users/new">
-        Sign up
-      </a>
+      <a data-toggle="modal" data-target="#myModal">Sign Up</a>
     </li>
     <% end %>
   </ul>
