--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,8 +16,8 @@
  */
 
 @import "bootstrap";
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300|Oswald:300);
 @import url(http://fonts.googleapis.com/css?family=Lato:100,300,400,700);
+@import url('//fonts.googleapis.com/css?family=Lato:100,300,400,700');
 
 .form_margin {
   text-align: center;
