user auth now in linked modals

--- a/app/views/events/_nav_bar.html.erb
+++ b/app/views/events/_nav_bar.html.erb
@@ -29,9 +29,7 @@
     </li>
     <% else %>
     <li>
-      <a href="/login">
-        Log in
-      </a>
+      <a data-toggle="modal" data-target="#myModal2">Log in</a>
     </li>
     <li>
       <a data-toggle="modal" data-target="#myModal">Sign Up</a>
