--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,7 +17,7 @@
 
 @import "bootstrap";
 @import url(http://fonts.googleapis.com/css?family=Lato:100,300,400,700);
-@import url('//fonts.googleapis.com/css?family=Lato:100,300,400,700');
+@import url(//fonts.googleapis.com/css?family=Lato:100,300,400,700);
 
 .form_margin {
   text-align: center;
