--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -43,25 +43,7 @@
 
       </div>
 
-
-
-      <!-- <div class="col-md-4 col-sm-4 col-xs-4 btn-group" style="margin-top: -10px" style="border: 1px solid purple">
-          <button type="button" class="btn btn-default likebutton"><span class="glyphicon glyphicon-star-empty"></span></button>
-
-      </div> -->
-
     </div>
-    
-    <!-- <div class="row"> -->
-      <!-- <div class="col-md-6 col-sm-6 col-xs-6" style="border: 1px solid red">
-        <ul>
-          <li class="location"><%#= truncate(event.venue, length: 25) %> <%#= truncate(event.city, length: 15) %></li>
-          <li class="event_date"><%#= date_converter(event.date) %>
-           <%#= event.event_date.strftime('%a, %b %d, %Y - %l:%M %p') %></li>
-        </ul>
-      </div> -->
-
-    <!-- </div> -->
 
   </div>
   <% end %>
@@ -69,6 +51,7 @@
 
 <!-- End of Event Listing container -->
 
+<!-- Sign Up Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -78,6 +61,21 @@
       </div>
       <div class="modal-body">
         <%= render 'events/registration' %>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Sign In Modal -->
+<div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel2" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title" id="myModalLabel">Log in</h4>
+      </div>
+      <div class="modal-body">
+        <%= render 'sessions/new' %>
       </div>
     </div>
   </div>
